[workspace]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["m1m1sha"]
repository = "https://github.com/m1m1sha/wib-rs"

[workspace.dependencies]
windows = "0.58"
once_cell = "1.19"

[package]
name = "wib-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
windows = { workspace = true, features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Memory",
  "Win32_System_IO",
] }
once_cell.workspace = true
